# cryocalc

./: .gitignore  README.md  manual_validation.py  propcalc.js  pyproject.toml  requirements.txt  setup.py  validation_test.py
cryocalc/: __init__.py  calculator.py  cli.py  materials.py  properties.py  thermal.py
cryocalc/data/: materials.json
docs/: api.rst  conf.py  index.rst  thermal_analysis.md
examples/: basic_usage.py  custom_material.py  plotting_example.py  thermal_analysis.py  thermal_conductance_guide.py
tests/: __init__.py  test_calculator.py  test_materials.py  test_properties.py  test_thermal.py
